--- a/docker-compose-siemens.yml
+++ b/docker-compose-siemens.yml
@@ -1,28 +1,42 @@
 version: '3'
 
+
+volumes:
+  ind_web_postgres_data: {}
+  ind_web_postgres_data_backups: {}
+
 services:
   plc_siemens:
     build:
       context: .
       dockerfile: ./dockerfiles/Siemens/Dockerfile
+    depends_on:
+      - postgres
     volumes:
       - .:/app  # Adjust this to your Django project directory
     ports:
-      - "8000:8000"
+      - "6000:6000"
+    expose:
+      - 6000
     command: /start
-    networks: 
-      - host
+
+  
+  postgres:
+    build:
+      context: .
+      dockerfile: ./compose/production/postgres/Dockerfile
+    image: ind_web_production_postgres
+    container_name: ind_web_postgres
+    volumes:
+      - ind_web_postgres_data:/var/lib/postgresql/data:Z
+      - ind_web_postgres_data_backups:/backups:z
+    env_file:
+      - ./.envs/.local/.postgres
     
 
-  # nginx:
-  #   image: nginx:latest
-  #   ports:
-  #     - "80:80"
-  #   volumes:
-  #     - ./nginx.conf:/etc/nginx/nginx.conf
-  #   depends_on:
-  #     - plc_siemens
 
-networks:
-  host:
+
+networks: 
+  default:
+    name: ind_web_network
     external: true
